finished chapter: Anwendungsmenü erstellen

--- a/grundlagen/index.html
+++ b/grundlagen/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Erste Anwendung</h1>
         <p>Chrome <script>document.write(process.versions.chrome)</script></p>
-        <p>Architektur <script>document.write(process.versions.chrome)</script></p>
+        <p>Architektur <script>document.write(process.arch)</script></p>
         <p>Speicher <script>document.write(process.getSystemMemoryInfo().free.toString())</script></p>
     </body>
 </html>
