finished chapter: ipc

--- a/grundlagen/src/index.html
+++ b/grundlagen/src/index.html
@@ -12,5 +12,11 @@
         <p>Chrome <script>document.write(process.versions.chrome)</script></p>
         <p>Architektur <script>document.write(process.arch)</script></p>
         <p>Speicher <script>document.write(process.getSystemMemoryInfo().free.toString())</script></p>
+
+        <button id="fensterZwei">Fenster 2</button>
+        <button id="error">Error</button>
+        <button id="errorSync">Error (Synchron)</button>
+
+        <script src="index.js"></script>
     </body>
 </html>
